'update-deploy-info'

--- a/_config.yml
+++ b/_config.yml
@@ -102,4 +102,6 @@ theme: vita
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ''
+  type: git
+  repo: git@github.com:fighting41love/fighting41love.github.io.git
+  branch: master
